--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
 		"studio": "prisma studio --browser none"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^5.2.2",
 		"@prisma/adapter-libsql": "^7.1.0",
 		"@prisma/client": "^7.1.0",
+		"@radix-ui/react-label": "^2.1.8",
+		"@radix-ui/react-select": "^2.2.6",
 		"@radix-ui/react-separator": "^1.1.8",
 		"@radix-ui/react-slot": "^1.2.4",
 		"class-variance-authority": "^0.7.1",
@@ -25,6 +28,7 @@
 		"next-themes": "^0.4.6",
 		"react": "^19.2.1",
 		"react-dom": "^19.2.1",
+		"react-hook-form": "^7.71.1",
 		"react-toastify": "^11.0.5",
 		"sharp": "^0.34.5",
 		"tailwind-merge": "^3.4.0",
