--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"zod": "^4.3.6"
 	},
 	"devDependencies": {
+		"@faker-js/faker": "^10.3.0",
 		"@tailwindcss/postcss": "^4.1.18",
 		"@types/node": "^25.0.10",
 		"@types/react": "^19.2.10",
