--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.2.2",
-		"@prisma/adapter-libsql": "^7.3.0",
-		"@prisma/client": "^7.3.0",
+		"@prisma/adapter-libsql": "^7.4.0",
+		"@prisma/client": "^7.4.0",
 		"@radix-ui/react-label": "^2.1.8",
 		"@radix-ui/react-select": "^2.2.6",
 		"@radix-ui/react-separator": "^1.1.8",
 		"@radix-ui/react-slot": "^1.2.4",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"dotenv": "^17.2.3",
-		"lucide-react": "^0.563.0",
+		"dotenv": "^17.3.1",
+		"lucide-react": "^0.574.0",
 		"next": "^16.1.6",
 		"next-themes": "^0.4.6",
 		"react": "^19.2.4",
@@ -31,27 +31,30 @@
 		"react-hook-form": "^7.71.1",
 		"react-toastify": "^11.0.5",
 		"sharp": "^0.34.5",
-		"tailwind-merge": "^3.4.0",
+		"tailwind-merge": "^3.4.1",
 		"zod": "^4.3.6"
 	},
 	"devDependencies": {
 		"@faker-js/faker": "^10.3.0",
 		"@tailwindcss/postcss": "^4.1.18",
-		"@types/node": "^25.0.10",
-		"@types/react": "^19.2.10",
+		"@types/node": "^25.2.3",
+		"@types/react": "^19.2.14",
 		"@types/react-dom": "^19.2.3",
 		"babel-plugin-react-compiler": "^1.0.0",
-		"eslint": "^9.39.2",
+		"eslint": "^10.0.0",
 		"eslint-config-next": "^16.1.6",
 		"eslint-plugin-react-hooks": "^7.0.1",
 		"prettier": "^3.8.1",
 		"prettier-plugin-tailwindcss": "^0.7.2",
-		"prisma": "^7.3.0",
+		"prisma": "^7.4.0",
 		"tailwindcss": "^4.1.18",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.9.3"
 	},
 	"trustedDependencies": [
+		"@prisma/engines",
+		"prisma",
+		"sharp",
 		"unrs-resolver"
 	],
 	"engines": {
